# location_analyzer_v2

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api.md  architecture.md  ml_pipeline.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: MapArea.jsx  PredictionForm.jsx  ProcessingOverlay.jsx  ResultsPanel.jsx
models/: kbins_discretizer.pkl  ordinal_encoder.pkl  power_transformer.pkl  quantile_transformer.pkl  robust_scaler.pkl  sklearn_preprocessor.pkl  xgboost_sales_model_v2_20_2_2026.pkl
scripts/: debug_scraper_browser.py  enrich_prediction_data.py  generate_template.py  generate_transport_template.py  ingest_prediction_data.py  merge_manual_demographics.py  merge_manual_transport.py  merge_v1_v2.py  scrape_demographics.py  update_nb.py
src/location_analyzer/: __init__.py  config.py  exceptions.py  logging_config.py
src/location_analyzer/api/: __init__.py  main.py  routes.py  schemas.py
src/location_analyzer/data/: __init__.py  cache.py  database.py  models.py  repository.py
src/location_analyzer/ml/: __init__.py  predict.py
src/location_analyzer/pipeline/: __init__.py  inference_pipeline.py
src/location_analyzer/scrapers/: __init__.py  base.py  crystalroof.py  freemaptools.py  google_maps.py  streetcheck.py
src/location_analyzer/visualization/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_config.py  test_database.py  test_exceptions.py  test_logging.py  test_scrapers.py
